<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ui.activities.booking_details.MyBookingDetailsActivity">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/orange"
        android:elevation="5dp"
        android:orientation="horizontal"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/padding_left"
            android:paddingRight="@dimen/padding_right"
            android:src="@drawable/arrow_back" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/label_back"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_back_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/label_booking_details"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title_size"
            android:textStyle="bold" />


    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/light"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/value_rockdale"
                    android:textColor="@color/text_color_blue_dark"
                    android:textSize="@dimen/text_title_size"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_sub_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/dummy_value_hayburn_avenue_near_avenue"
                    android:textColor="@color/text_color_grey_light"
                    android:textSize="@dimen/text_sub_title_size" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/initial_margin_left"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginRight="@dimen/initial_margin_left"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_vehicle_img"
                    android:layout_width="@dimen/vehicle_image_size"
                    android:layout_height="@dimen/vehicle_image_size"
                    android:padding="5dp"
                    android:src="@drawable/car_place_holder" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingLeft="5dp">

                    <TextView
                        android:id="@+id/tv_vehicle_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="@string/value_rina_the_yaris"
                        android:textColor="@color/text_color_blue_dark"
                        android:textSize="@dimen/text_title_size"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"

                        android:padding="3dp">

                        <TextView
                            android:id="@+id/tv_seating_capacity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:drawableLeft="@drawable/usergroup"
                            android:drawablePadding="7dp"
                            android:text="5"
                            android:textColor="@color/text_color_grey_light"
                            android:textSize="@dimen/text_sub_title_size" />

                        <View
                            android:layout_width="2dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/margin_between_views"
                            android:background="@color/text_color_grey_light" />

                        <TextView
                            android:id="@+id/tv_number_plate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/value_cm57zy"
                            android:textColor="@color/text_color_grey_light"
                            android:textSize="@dimen/text_sub_title_size" />

                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/initial_margin_left"
                android:layout_marginRight="@dimen/initial_margin_right"
                android:layout_marginTop="@dimen/margin_top"
                android:paddingTop="@dimen/padding_top"
                android:paddingBottom="@dimen/padding_top"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_starts"
                    android:textColor="@color/dark"
                    android:textSize="@dimen/text_normal_size" />

                <TextView
                    android:id="@+id/tv_start_date_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"

                    android:text=""
                    android:textColor="@color/text_color_grey_light"
                    android:textSize="@dimen/text_normal_size_1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/initial_margin_left"
                android:layout_marginRight="@dimen/initial_margin_right"
                 android:paddingTop="@dimen/padding_top"
                android:paddingBottom="@dimen/padding_top"

                android:gravity="center_vertical"
                android:orientation="horizontal"
               >


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_ends"
                    android:textColor="@color/dark"
                    android:textSize="@dimen/text_normal_size" />

                <TextView
                    android:id="@+id/tv_end_date_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text=""
                    android:textColor="@color/text_color_grey_light"
                    android:textSize="@dimen/text_normal_size_1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/initial_margin_left"
                android:layout_marginRight="@dimen/initial_margin_right"
                 android:paddingTop="@dimen/padding_top"
                android:paddingBottom="@dimen/padding_top"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_duration"
                    android:textColor="@color/dark"
                    android:textSize="@dimen/text_normal_size" />

                <TextView
                    android:id="@+id/tv_duration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text=""
                    android:textColor="@color/text_color_grey_light"
                    android:textSize="@dimen/text_normal_size_1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/initial_margin_left"
                android:layout_marginRight="@dimen/initial_margin_right"
                 android:paddingTop="@dimen/padding_top"
                android:paddingBottom="@dimen/padding_top"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_estimated_cost"
                        android:textColor="@color/dark"
                        android:textSize="@dimen/text_normal_size" />

                    <TextView
                        android:id="@+id/tv_free_kms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(no free kms included)"
                        android:textColor="@color/text_color_grey_light"
                        android:textSize="@dimen/text_normal_size_1" />


                </LinearLayout>


                <TextView
                    android:id="@+id/tv_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text=""
                    android:textColor="@color/dark"
                    android:textSize="@dimen/text_price_size_big"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/initial_margin_left"
                android:layout_marginRight="@dimen/initial_margin_right"
                android:paddingTop="@dimen/padding_top"
                android:paddingBottom="@dimen/padding_top"
                android:gravity="center_vertical"
                android:orientation="horizontal"
               >


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_fuel_pin"
                    android:textColor="@color/dark"
                    android:textSize="@dimen/text_normal_size" />

                <TextView
                    android:id="@+id/tv_fuel_pin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text=""
                    android:textColor="@color/text_color_grey_light"
                    android:textSize="@dimen/text_normal_size_1" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
